fixing comments, changing Template.draw.colors

--- a/client/draw.html
+++ b/client/draw.html
@@ -25,7 +25,7 @@
         </div>
         <div class="btn-group">
           <!-- PHASE 1
-               For each color (see Template.draw.colors), make a button to turn the pen that color.
+               For each color (see the colors function in Template.draw.helpers), make a button to turn the pen that color.
 
                Use the colorButton template for the html here.
             -->
