--- a/client/draw.html
+++ b/client/draw.html
@@ -49,7 +49,7 @@
 </template>
 
 <template name="colorButton">
-  <a href="#" class="btn {{color}} {{active}}"> &#x2B24; </a>
+  <a href="#" class="btn {{this}} {{active}}" style="color: {{this}}"> &#x2B24; </a>
 
   <!-- PHASE 1
        Make a link with the html classes:
