--- a/client/telephone-pictionary.html
+++ b/client/telephone-pictionary.html
@@ -3,7 +3,6 @@
 </head>
 
 <body>
-  <!-- PHASE 2 Add login buttons -->
   {{> loginButtons}}
   <div class="container-fluid">
     <div class="row-fluid">
@@ -18,7 +17,6 @@
 </body>
 
 <template name="main">
-  <!-- PHASE 2 Add code to display only a special message to log in if we are not yet logged in -->
   {{#if loggedIn}}
     {{#with assignment}}
       <!-- PHASE 4 We should decide whether we're drawing, describing, or starting
@@ -35,14 +33,15 @@
 </template>
 
 <template name="sidebar">
-  <!-- PHASE 2 Add code to display a sidebar if you're logged in but not otherwise -->
-  <ul class="nav nav-pills nav-stacked">
-    <li class="{{playActive}}"><a class="playGame">Play</a></li>
-    <li class="nav-header">Your recent games:</li>
-    {{#each recentGames}}
-    <li class="{{gameActive}}"><a class="selectGame" id="{{_id}}">{{firstPhrase}}</a></li>
-    {{/each}}
-  </ul>
+  {{#if loggedIn}}
+    <ul class="nav nav-pills nav-stacked">
+      <li class="{{playActive}}"><a class="playGame">Play</a></li>
+      <li class="nav-header">Your recent games:</li>
+      {{#each recentGames}}
+      <li class="{{gameActive}}"><a class="selectGame" id="{{_id}}">{{firstPhrase}}</a></li>
+      {{/each}}
+    </ul>
+  {{/if}}
 </template>
 
 <template name="show">
