removed the constant tag, made entries for loggedIn helper

--- a/client/draw.html
+++ b/client/draw.html
@@ -33,11 +33,9 @@
       </div>
     </div>
     <div class="row-fluid">
-      <!--{{#constant}}-->
       <div class="canvas">
         <canvas id="pictionary"></canvas>
       </div>
-      <!--{{/constant}}-->
     </div>
     <div class="row-fluid">
       <a class="btn btn-large" id="done">Done!</a>
@@ -47,12 +45,13 @@
 
 <template name="colorButton">
   <!-- PHASE 1
-       Make a link with the html classes:
+       Make an <a> element with the following classes:
        * btn
        * the color of the button
        * "active" if the button is active.
 
-       The link should have a style attribute that turns its color to the chosen
-    color, and some character that lets you see the chosen color (I recommend &#x2B24;)
+       1) The link should have a style attribute that turns its color to the chosen
+    color
+       2) The link should also have some character that lets you see the chosen color (I recommend &#x2B24;)
     -->
 </template>
