--- a/client/telephone-pictionary.html
+++ b/client/telephone-pictionary.html
@@ -23,7 +23,15 @@
            out a phrase, based on the assignment.  Replace this with code that
            does that.  Note that you can tell what kind of assignment it is based
            on whether `description`, `picture` or `start` is truthy.-->
-      {{> draw}}
+      {{#if start}}
+        {{> start}}
+      {{/if}}
+      {{#if picture}}
+        {{> describe}}
+      {{/if}}
+      {{#if description}}
+        {{> draw}}
+      {{/if}}
     {{/with}}
     {{#with game}}
       <!-- This will show the results of a finished game, if we're supposed to be looking at one -->
