--- a/client/describe.html
+++ b/client/describe.html
@@ -12,18 +12,18 @@
       <div class="span12">
         <div class="input-append">
           <form>
-            <input id="phrase" class="input-xxlarge" type="text">
+            <input id="phrase" class="input-xxlarge" type="text"></input>
             <a class="btn" id="done">Done!</a>
           </form>
         </div>
       </div>
     </div>
     <div class="row-fluid">
-      <!--{{#constant}}-->
+      {{#constant}}
       <div class="canvas">
         <canvas id="pictionary"></canvas>
       </div>
-      <!--{{/constant}}-->
+      {{/constant}}
     </div>
   </div>
 </template>
