--- a/client/start.html
+++ b/client/start.html
@@ -13,7 +13,7 @@
         <h2 class="muted">Write a phrase someone could draw:</h2>
         <div class="input-append">
           <form>
-            <input id="phrase" class="input-xxlarge" type="text">
+            <input id="phrase" class="input-xxlarge" type="text"></input>
             <a class="btn" id="done">Done!</a>
           </form>
         </div>
