--- a/client/telephone-pictionary.html
+++ b/client/telephone-pictionary.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  {{> loginButtons}}
+  {{loginButtons}}
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span8 offset1">
@@ -12,39 +12,39 @@
       <div class="span2">
         {{> sidebar}}
       </div>
-    </div>
   </div>
 </body>
 
 <template name="main">
   {{#if loggedIn}}
-    {{#with assignment}}
-      {{#if start}}
-        {{> start}}
-      {{/if}}
-      {{#if picture}}
-        {{> describe}}
-      {{/if}}
-      {{#if description}}
-        {{> draw}}
-      {{/if}}
-    {{/with}}
-    {{#with game}}
-      <!-- This will show the results of a finished game, if we're supposed to be looking at one -->
-      {{> show}}
-    {{/with}}
+  {{#with assignment}}
+    {{#if start}}
+      {{> start}}
+    {{/if}}
+    {{#if picture}}
+      {{> describe}}
+    {{/if}}
+    {{#if description}}
+      {{> draw}}
+    {{/if}}
+  {{/with}}
+  {{#with game}}
+    {{> show}}
+  {{/with}}
+  {{else}}
+  <h1>Log in to play</h1>
   {{/if}}
 </template>
 
 <template name="sidebar">
   {{#if loggedIn}}
-    <ul class="nav nav-pills nav-stacked">
-      <li class="{{playActive}}"><a class="playGame">Play</a></li>
-      <li class="nav-header">Your recent games:</li>
-      {{#each recentGames}}
-      <li class="{{gameActive}}"><a class="selectGame" id="{{_id}}">{{firstPhrase}}</a></li>
-      {{/each}}
-    </ul>
+  <ul class="nav nav-pills nav-stacked">
+    <li class="{{playActive}}"><a class="playGame">Play</a></li>
+    <li class="nav-header">Your recent games:</li>
+    {{#each recentGames}}
+    <li class="{{gameActive}}"><a class="selectGame" id="{{_id}}">{{firstPhrase}}</a></li>
+    {{/each}}
+  </ul>
   {{/if}}
 </template>
 
@@ -61,11 +61,11 @@
 <template name="showMove">
   <div class="row-fluid">
     {{#if picture}}
-      <!--{{#constant}}-->
+      {{#constant}}
         <div class="canvas">
           <canvas id="{{_id}}"></canvas>
         </div>
-      <!--{{/constant}}-->
+      {{/constant}}
     {{else}}
     <h3>{{answer}}</h3>
     {{/if}}
