--- a/client/telephone-pictionary.html
+++ b/client/telephone-pictionary.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  {{loginButtons}}
+  {{> loginButtons}}
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span8 offset1">
@@ -12,6 +12,7 @@
       <div class="span2">
         {{> sidebar}}
       </div>
+    </div>
   </div>
 </body>
 
@@ -61,11 +62,9 @@
 <template name="showMove">
   <div class="row-fluid">
     {{#if picture}}
-      {{#constant}}
-        <div class="canvas">
-          <canvas id="{{_id}}"></canvas>
-        </div>
-      {{/constant}}
+      <div class="canvas">
+        <canvas id="{{_id}}"></canvas>
+      </div>
     {{else}}
     <h3>{{answer}}</h3>
     {{/if}}
